--- a/index.html
+++ b/index.html
@@ -4,66 +4,84 @@
     <meta charset="UTF-8" />
     <meta name="description" content="WebStudio main page" />
     <title>WebStudio</title>
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
   </head>
+
   <body>
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
+        <a href="./index.html"
+          ><span class="logo-web">Web</span
+          ><span class="logo-studio">Studio</span></a
+        >
         <ul>
           <li>
-            <a href="">Studio</a>
+            <a href="./index.html" class="header-link">Studio</a>
           </li>
           <li>
-            <a href="">Portfolio</a>
+            <a href="./portfolio.html" class="header-link">Portfolio</a>
           </li>
           <li>
-            <a href="">Contacts</a>
+            <a href="./index.html" class="header-link">Contacts</a>
           </li>
         </ul>
       </nav>
       <address>
         <ul>
           <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com" class="mail-link"
+              >info@devstudio.com</a
+            >
           </li>
           <li>
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a href="tel:+110001111111" class="tel-link">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
     </header>
+
     <main>
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="main-section">
+        <h1 class="main-section-title">
+          Effective Solutions for Your Business
+        </h1>
+        <button type="button" class="order-btn">Order Service</button>
       </section>
       <section>
+        <!--
         <h2>We Provide</h2>
+        -->
         <ul>
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="features-title">Strategy</h3>
+            <p class="features-title-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="section-service-title">Punctuality</h3>
+            <p class="features-title-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="section-service-title">Diligence</h3>
+            <p class="features-title-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="features-title">Technologies</h3>
+            <p class="features-title-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -71,7 +89,7 @@
         </ul>
       </section>
       <section>
-        <h2>What are we doing</h2>
+        <h2 class="engage-title">What are we doing</h2>
         <ul>
           <li>
             <img
@@ -83,7 +101,7 @@
           <li>
             <img
               src="./images/img2.jpg"
-              alt="multiple screens of one smartphone"
+              alt="Multiple screens of one smartphone"
               width="360"
             />
           </li>
@@ -101,30 +119,34 @@
         <ul>
           <li>
             <img src="./images/mark.jpg" alt="Mark Guerrero" width="264" />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="team-name">Mark Guerrero</h3>
+            <p class="team-text">Product Designer</p>
           </li>
           <li>
             <img src="./images/tom.jpg" alt="Tom Ford" width="264" />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="team-name">Tom Ford</h3>
+            <p class="team-text">Frontend Developer</p>
           </li>
           <li>
             <img src="./images/camila.jpg" alt="Camila Garcia" width="264" />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="team-name">Camila Garcia</h3>
+            <p class="team-text">Marketing</p>
           </li>
           <li>
             <img src="./images/daniel.jpg" alt="Daniel Wilson" width="264" />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="team-name">Daniel Wilson</h3>
+            <p class="team-text">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
+
     <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+      <a href="./index.html"
+        ><span class="footer-logo-web">Web</span
+        ><span class="footer-logo-studio">Studio</span></a
+      >
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
