--- a/portfolio.html
+++ b/portfolio.html
@@ -16,26 +16,25 @@
   <body>
     <header>
       <nav>
-        <a href="./index.html"
-          ><span class="logo-web">Web</span
-          ><span class="logo-studio">Studio</span></a
-        >
-        <ul>
+        <a href="./index.html"><span class="logo-web">Web Studio</span></a>
+        <ul class="list">
           <li>
-            <a href="./index.html" class="header-link">Studio</a>
+            <a href="./index.html" class="header-link" class="link">Studio</a>
           </li>
           <li>
-            <a href="./index.html" class="header-link">Portfolio</a>
+            <a href="./portfolio.html" class="header-link" class="link"
+              >Portfolio</a
+            >
           </li>
           <li>
-            <a href="./index.html" class="header-link">Contacts</a>
+            <a href="" class="header-link" class="link">Contacts</a>
           </li>
         </ul>
       </nav>
-      <address>
-        <ul>
+      <address class="address">
+        <ul class="list">
           <li>
-            <a href="mailto:info@devstudio.com" class="mail-link"
+            <a href="mailto:info@devstudio.com" class="mail-link" class="link"
               >info@devstudio.com</a
             >
           </li>
