--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,9 @@
   <body>
     <header>
       <nav>
-        <a href="./index.html"><span class="logo-web">Web Studio</span></a>
+        <a href="./index.html" class="logo-web" class="link"
+          >Web<span class="logo-studio">Studio</span</a
+        >
         <ul class="list">
           <li>
             <a href="./index.html" class="header-link" class="link">Studio</a>
