--- a/portfolio.html
+++ b/portfolio.html
@@ -41,7 +41,7 @@
             >
           </li>
           <li>
-            <a href="tel:+110001111111" class="tel-link">+11 (000) 111-11-11</a>
+            <a href="tel:+110001111111" class="tel-link" class="link">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
