--- a/index.html
+++ b/index.html
@@ -16,32 +16,32 @@
   <body>
     <header>
       <nav>
-        <a href="./index.html" class="logo-web" class="link"
-          >Web<span class="logo-studio">Studio</span</a
+        <a href="./index.html" class="logo-web link"
+          >Web<span class="logo-studio">Studio</span></a
         >
         <ul class="list">
           <li>
-            <a href="./index.html" class="header-link" class="link">Studio</a>
+            <a href="./index.html" class="header-link link">Studio</a>
           </li>
           <li>
-            <a href="./portfolio.html" class="header-link" class="link"
-              >Portfolio</a
-            >
+            <a href="./portfolio.html" class="header-link link">Portfolio</a>
           </li>
           <li>
-            <a href="" class="header-link" class="link">Contacts</a>
+            <a href="" class="header-link link">Contacts</a>
           </li>
         </ul>
       </nav>
       <address class="address">
         <ul class="list">
           <li>
-            <a href="mailto:info@devstudio.com" class="mail-link" class="link"
+            <a href="mailto:info@devstudio.com" class="mail-link link"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a href="tel:+110001111111" class="tel-link" class="link">+11 (000) 111-11-11</a>
+            <a href="tel:+110001111111" class="tel-link link"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
