--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
             >
           </li>
           <li>
-            <a href="" class="header-link" class="link">Contacts</a>
+            <a href="" class="header-link link">Contacts</a>
           </li>
         </ul>
       </nav>
@@ -37,8 +37,7 @@
         <ul class="list">
           <li>
             <a href="mailto:info@devstudio.com" class="mail-link link"
-              >info@devstudio.com</a
-            >
+              >info@devstudio.com</a>
           </li>
           <li>
             <a href="tel:+110001111111" class="tel-link link">+11 (000) 111-11-11</a>
