second section update

--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
       <address class="address">
         <ul class="list">
           <li>
-            <a href="mailto:info@devstudio.com" class="mail-link link"
+            <a href="mailto:info@devstudio.com" class="address-link link"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a href="tel:+110001111111" class="tel-link link"
+            <a href="tel:+110001111111" class="address-link link"
               >+11 (000) 111-11-11</a
             >
           </li>
@@ -55,10 +55,8 @@
         <button type="button" class="order-btn">Order Service</button>
       </section>
       <section>
-        <!--
         <h2>We Provide</h2>
-        -->
-        <ul>
+        <ul class="list">
           <li>
             <h3 class="features-title">Strategy</h3>
             <p class="features-title-text">
@@ -67,14 +65,14 @@
             </p>
           </li>
           <li>
-            <h3 class="section-service-title">Punctuality</h3>
+            <h3 class="features-title">Punctuality</h3>
             <p class="features-title-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3 class="section-service-title">Diligence</h3>
+            <h3 class="features-title">Diligence</h3>
             <p class="features-title-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
