--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       </section>
       <section>
         <h2 class="engage-title">What are we doing</h2>
-        <ul>
+        <ul class="list">
           <li>
             <img
               src="./images/img1.jpg"
@@ -113,25 +113,25 @@
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Our Team</h2>
-        <ul>
-          <li>
+      <section class="team">
+        <h2 class="team-title">Our Team</h2>
+        <ul class="list">
+          <li class="team-card">
             <img src="./images/mark.jpg" alt="Mark Guerrero" width="264" />
             <h3 class="team-name">Mark Guerrero</h3>
             <p class="team-text">Product Designer</p>
           </li>
-          <li>
+          <li class="team-card">
             <img src="./images/tom.jpg" alt="Tom Ford" width="264" />
             <h3 class="team-name">Tom Ford</h3>
             <p class="team-text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-card">
             <img src="./images/camila.jpg" alt="Camila Garcia" width="264" />
             <h3 class="team-name">Camila Garcia</h3>
             <p class="team-text">Marketing</p>
           </li>
-          <li>
+          <li class="team-card">
             <img src="./images/daniel.jpg" alt="Daniel Wilson" width="264" />
             <h3 class="team-name">Daniel Wilson</h3>
             <p class="team-text">UI Designer</p>
@@ -140,10 +140,9 @@
       </section>
     </main>
 
-    <footer>
-      <a href="./index.html"
-        ><span class="footer-logo-web">Web</span
-        ><span class="footer-logo-studio">Studio</span></a
+    <footer class="footer">
+      <a href="./index.html" class="logo-web link"
+        >Web<span class="logo-studio-footer">Studio</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
