--- a/portfolio.html
+++ b/portfolio.html
@@ -17,16 +17,14 @@
     <header>
       <nav>
         <a href="./index.html" class="logo-web link"
-          >Web<span class="logo-studio">Studio</span</a
+          >Web<span class="logo-studio">Studio</span></a
         >
         <ul class="list">
           <li>
             <a href="./index.html" class="header-link link">Studio</a>
           </li>
           <li>
-            <a href="./portfolio.html" class="header-link link"
-              >Portfolio</a
-            >
+            <a href="./portfolio.html" class="header-link link">Portfolio</a>
           </li>
           <li>
             <a href="" class="header-link link">Contacts</a>
@@ -36,11 +34,14 @@
       <address class="address">
         <ul class="list">
           <li>
-            <a href="mailto:info@devstudio.com" class="mail-link link"
-              >info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com" class="address-link link"
+              >info@devstudio.com</a
+            >
           </li>
           <li>
-            <a href="tel:+110001111111" class="tel-link link">+11 (000) 111-11-11</a>
+            <a href="tel:+110001111111" class="address-link link"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
@@ -139,10 +140,9 @@
       </section>
     </main>
 
-    <footer>
-      <a href="./index.html"
-        ><span class="footer-logo-web">Web</span
-        ><span class="footer-logo-studio">Studio</span></a
+    <footer class="footer">
+      <a href="./index.html" class="logo-web link"
+        >Web<span class="logo-studio-footer">Studio</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
