--- a/portfolio.html
+++ b/portfolio.html
@@ -49,92 +49,111 @@
 
     <main>
       <section class="filter">
-        <ul>
-          <li><button type="button" class="filter-btn-all">All</button></li>
+        <h1>Lorem, ipsum dolor.</h1>
+        <ul class="list">
+          <li><button type="button" class="filter-btn">All</button></li>
           <li><button type="button" class="filter-btn">Web Site</button></li>
           <li><button type="button" class="filter-btn">App</button></li>
           <li><button type="button" class="filter-btn">Design</button></li>
           <li><button type="button" class="filter-btn">Marketing</button></li>
         </ul>
-      </section>
-      <section>
-        <ul>
-          <li>
-            <img
-              src="./images/image1.jpg"
-              alt="BankApp Interface"
-              width="360"
-            />
-            <h3>Banking App Interface Concept</h3>
-            <p class="img-text">App</p>
+        <ul class="list">
+          <li class="link">
+            <a href="">
+              <img
+                src="./images/image1.jpg"
+                alt="BankApp Interface"
+                width="360"
+              />
+              <h2 class="img-title">Banking App Interface Concept</h2>
+              <p class="img-text">App</p></a
+            >
           </li>
-          <li>
-            <img
+          <li class="link">
+              <a href="">
+              <img
               src="./images/image2.jpg"
               alt="Scanning QR-code with a smartphone"
               width="360"
             />
-            <h3>Cashless Payment</h3>
-            <p class="img-text">Marketing</p>
+            <h2 class="img-title">Cashless Payment</h2>
+            <p class="img-text">Marketing</p></a>
           </li>
-          <li>
-            <img
+          <li class="link">
+            <a
+              href="">
+              <img
               src="./images/image3.jpg"
               alt="Laptop and smartphone"
               width="360"
             />
-            <h3>Meditation App</h3>
-            <p class="img-text">App</p>
+            <h2 class="img-title">Meditation App</h2>
+            <p class="img-text">App</p></a>
           </li>
-          <li>
-            <img
+          <li class="link">
+            <a
+              href=""></a>
+              <img
               src="./images/image4.jpg"
               alt="Smartphone holder in the car"
               width="360"
             />
-            <h3>Taxi Service</h3>
-            <p class="img-text">Marketing</p>
+            <h2 class="img-title">Taxi Service</h2>
+            <p class="img-text">Marketing</p></a>
           </li>
-          <li>
-            <img
+          <li class="link">
+            <a
+              href="">
+              <img
               src="./images/image5.jpg"
               alt="Smartphone screen"
               width="360"
             />
-            <h3>Screen Illustrations</h3>
-            <p class="img-text">Design</p>
+            <h2 class="img-title">Screen Illustrations</h2>
+            <p class="img-text">Design</p></a>
           </li>
-          <li>
-            <img
+          <li class="link">
+            <a
+              href="">
+              <img
               src="./images/image6.jpg"
               alt="Woman in orange sweater with a phone"
               width="360"
             />
-            <h3>Online Courses</h3>
-            <p class="img-text">Marketing</p>
+            <h2 class="img-title">Online Courses</h2>
+            <p class="img-text">Marketing</p></a>
           </li>
-          <li>
-            <img
+          <li class="link">
+            <a
+              href="">
+              <img
               src="./images/image7.jpg"
               alt="Instagram stories concept"
               width="360"
             />
-            <h3>Instagram Stories Concept</h3>
-            <p class="img-text">Design</p>
+            <h2 class="img-title">Instagram Stories Concept</h2>
+            <p class="img-text">Design</p></a>
           </li>
-          <li>
-            <img
+          <li class="link">
+            <a
+              href="">
+              <img
               src="./images/image8.jpg"
               alt="Person with fruits in the bag "
               width="360"
             />
-            <h3>Organic Food</h3>
-            <p class="img-text">Web Site</p>
+            <h2 class="img-title">Organic Food</h2>
+            <p class="img-text">Web Site</p></a>
           </li>
-          <li>
-            <img src="./images/image9.jpg" alt="A cup of coffe" width="360" />
-            <h3>Fresh Coffee</h3>
-            <p class="img-text">Web Site</p>
+          <li class="link">
+            <a
+              href="">
+              <img src="./images/image9.jpg"
+              alt="A cup of coffe"
+              width="360"
+            />
+            <h2 class="img-title">Fresh Coffee</h2>
+            <p class="img-text">Web Site</p></a>
           </li>
         </ul>
       </section>
