--- a/portfolio.html
+++ b/portfolio.html
@@ -51,15 +51,25 @@
       <section class="filter">
         <h1>Lorem, ipsum dolor.</h1>
         <ul class="list">
-          <li><button type="button" class="filter-btn">All</button></li>
-          <li><button type="button" class="filter-btn">Web Site</button></li>
-          <li><button type="button" class="filter-btn">App</button></li>
-          <li><button type="button" class="filter-btn">Design</button></li>
-          <li><button type="button" class="filter-btn">Marketing</button></li>
+          <li class="link">
+            <button type="button" class="filter-btn">All</button>
+          </li>
+          <li class="link">
+            <button type="button" class="filter-btn">Web Site</button>
+          </li>
+          <li class="link">
+            <button type="button" class="filter-btn">App</button>
+          </li>
+          <li class="link">
+            <button type="button" class="filter-btn">Design</button>
+          </li>
+          <li class="link">
+            <button type="button" class="filter-btn">Marketing</button>
+          </li>
         </ul>
         <ul class="list">
-          <li class="link">
-            <a href="">
+          <li>
+            <a href="" class="link">
               <img
                 src="./images/image1.jpg"
                 alt="BankApp Interface"
@@ -69,91 +79,89 @@
               <p class="img-text">App</p></a
             >
           </li>
-          <li class="link">
-              <a href="">
+          <li>
+            <a href="" class="link">
               <img
-              src="./images/image2.jpg"
-              alt="Scanning QR-code with a smartphone"
-              width="360"
-            />
-            <h2 class="img-title">Cashless Payment</h2>
-            <p class="img-text">Marketing</p></a>
+                src="./images/image2.jpg"
+                alt="Scanning QR-code with a smartphone"
+                width="360"
+              />
+              <h2 class="img-title">Cashless Payment</h2>
+              <p class="img-text">Marketing</p></a
+            >
           </li>
-          <li class="link">
-            <a
-              href="">
+          <li>
+            <a href="" class="link">
               <img
-              src="./images/image3.jpg"
-              alt="Laptop and smartphone"
-              width="360"
-            />
-            <h2 class="img-title">Meditation App</h2>
-            <p class="img-text">App</p></a>
+                src="./images/image3.jpg"
+                alt="Laptop and smartphone"
+                width="360"
+              />
+              <h2 class="img-title">Meditation App</h2>
+              <p class="img-text">App</p></a
+            >
           </li>
-          <li class="link">
-            <a
-              href=""></a>
+          <li>
+            <a href="" class="link">
               <img
-              src="./images/image4.jpg"
-              alt="Smartphone holder in the car"
-              width="360"
-            />
-            <h2 class="img-title">Taxi Service</h2>
-            <p class="img-text">Marketing</p></a>
+                src="./images/image4.jpg"
+                alt="Smartphone holder in the car"
+                width="360"
+              />
+              <h2 class="img-title">Taxi Service</h2>
+              <p class="img-text">Marketing</p></a
+            >
           </li>
-          <li class="link">
-            <a
-              href="">
+          <li>
+            <a href="" class="link">
               <img
-              src="./images/image5.jpg"
-              alt="Smartphone screen"
-              width="360"
-            />
-            <h2 class="img-title">Screen Illustrations</h2>
-            <p class="img-text">Design</p></a>
+                src="./images/image5.jpg"
+                alt="Smartphone screen"
+                width="360"
+              />
+              <h2 class="img-title">Screen Illustrations</h2>
+              <p class="img-text">Design</p></a
+            >
           </li>
-          <li class="link">
-            <a
-              href="">
+          <li>
+            <a href="" class="link">
               <img
-              src="./images/image6.jpg"
-              alt="Woman in orange sweater with a phone"
-              width="360"
-            />
-            <h2 class="img-title">Online Courses</h2>
-            <p class="img-text">Marketing</p></a>
+                src="./images/image6.jpg"
+                alt="Woman in orange sweater with a phone"
+                width="360"
+              />
+              <h2 class="img-title">Online Courses</h2>
+              <p class="img-text">Marketing</p></a
+            >
           </li>
-          <li class="link">
-            <a
-              href="">
+          <li>
+            <a href="" class="link">
               <img
-              src="./images/image7.jpg"
-              alt="Instagram stories concept"
-              width="360"
-            />
-            <h2 class="img-title">Instagram Stories Concept</h2>
-            <p class="img-text">Design</p></a>
+                src="./images/image7.jpg"
+                alt="Instagram stories concept"
+                width="360"
+              />
+              <h2 class="img-title">Instagram Stories Concept</h2>
+              <p class="img-text">Design</p></a
+            >
           </li>
-          <li class="link">
-            <a
-              href="">
+          <li>
+            <a href="" class="link">
               <img
-              src="./images/image8.jpg"
-              alt="Person with fruits in the bag "
-              width="360"
-            />
-            <h2 class="img-title">Organic Food</h2>
-            <p class="img-text">Web Site</p></a>
+                src="./images/image8.jpg"
+                alt="Person with fruits in the bag "
+                width="360"
+              />
+              <h2 class="img-title">Organic Food</h2>
+              <p class="img-text">Web Site</p></a
+            >
           </li>
-          <li class="link">
-            <a
-              href="">
-              <img src="./images/image9.jpg"
-              alt="A cup of coffe"
-              width="360"
-            />
-            <h2 class="img-title">Fresh Coffee</h2>
-            <p class="img-text">Web Site</p></a>
+          <li>
+            <a href="" class="link">
+              <img src="./images/image9.jpg" alt="A cup of coffe" width="360" />
+              <h2 class="img-title">Fresh Coffee</h2>
+              <p class="img-text">Web Site</p></a
+            >
           </li>
         </ul>
       </section>
