--- a/portfolio.html
+++ b/portfolio.html
@@ -49,7 +49,7 @@
 
     <main>
       <section class="filter">
-        <h1>Lorem, ipsum dolor.</h1>
+        <h1 hidden>Lorem, ipsum dolor.</h1>
         <ul class="list">
           <li class="link">
             <button type="button" class="filter-btn">All</button>
